rt01-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: rt01
  namespace: rt
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~ "^/(.*)" {
        proxy_pass http://10.100.11.1:80;
      }
spec:
  rules:
  - host: rt01.gpastor.net
  tls:
  - hosts:
    - rt01.gpastor.net
    secretName: gpastor-wildcard
